--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ summary {
 
 <h1 class="title toc-ignore">Codificación de señales digitales</h1>
 <h4 class="author">Julio César Ramirez-Pacheco</h4>
-<h4 class="date">6/3/2020</h4>
+<h4 class="date">03/09/2020</h4>
 
 </div>
 
@@ -446,7 +446,7 @@ plot(time, bits, type= &quot;l&quot;, main=&quot;NRZI&quot;, xlab=&quot;Tiempo&q
 <li>B8ZS.</li>
 <li>HDB3.</li>
 </ol>
-<p>Utilizando el lenguaje de programación R. Pueden utilizar la plataforma RStudio Cloud para poder realizarlo. Fecha de entrega: Dominggo 7 de Junio de 2020. Atte. Dr. Julio César Ramírez Pacheco.</p>
+<p>Utilizando el lenguaje de programación R. Pueden utilizar la plataforma RStudio Cloud para poder realizarlo. Fecha de entrega: Domingo 11 de Septiembre de 2020. Atte. Dr. Julio César Ramírez Pacheco.</p>
 </div>
 
 
