--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ plot(time, bits, type= &quot;l&quot;, main=&quot;NRZI&quot;, xlab=&quot;Tiempo&q
 <li>B8ZS.</li>
 <li>HDB3.</li>
 </ol>
-<p>Utilizando el lenguaje de programación R. Pueden utilizar la plataforma RStudio Cloud para poder realizarlo. Fecha de entrega: Domingo 11 de Septiembre de 2020. Atte. Dr. Julio César Ramírez Pacheco.</p>
+<p>Utilizando el lenguaje de programación R. Pueden utilizar la plataforma RStudio Cloud para poder realizarlo. Fecha de entrega: Jueves 11 de Septiembre de 2020. Atte. Dr. Julio César Ramírez Pacheco.</p>
 </div>
 
 
